--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -612,6 +612,9 @@ gMaxLIModulatedDTIM=6
 # Disable RX wakelock feature
 rx_wakelock_timeout=0
 
+# Enable mac spoofing for firmware scans only (disabled in host scans)
+gEnableMacAddrSpoof=2
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
