--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -2,6 +2,24 @@
 
 # defaults for the WLAN Driver
 
+# ifdef VENDOR_EDIT
+gInitialScanNoDFSChnl=1
+gInitialDwellTime=20
+RoamRssiDiff=5
+gEnable2x2=0
+g11dSupportEnabled=1
+gSoftApMaxPeers=8
+gRAFilterEnable=0
+gRoamBmissFirstBcnt=25
+gRoamBmissFinalBcnt=35
+RTSThreshold=117350
+gTcpDelAckThresholdHigh=10000
+gDroppedPktDisconnectTh=1024
+gRuntimePM=0
+gMCAddrListEnable=0
+gBpfFilterEnable=0
+gEnablePowerSaveOffload=4
+# endif /* VENDOR_EDIT */
 
 # Enable IMPS or not
 gEnableImps=1
@@ -130,21 +148,6 @@ gEnableApUapsd=1
 gFixedRate=0
 
 
-# Maximum Tx power
-
-# gTxPowerCap=30
-
-
-# Fragmentation Threshold
-
-# gFragmentationThreshold=2346
-
-
-# RTS threshold
-
-RTSThreshold=1048576
-
-
 # Intra-BSS forward
 
 gDisableIntraBssFwd=0
@@ -153,11 +156,6 @@ gDisableIntraBssFwd=0
 # WMM Enable/Disable
 
 WmmIsEnabled=0
-
-
-# 802.11d support
-
-g11dSupportEnabled=0
 
 # 802.11h support
 
@@ -183,11 +181,6 @@ gMaxNeighborReqTries=3
 # To disable, set FastRoamEnabled=0
 FastRoamEnabled=1
 
-#Check if the AP to which we are roaming is better than current AP in terms of RSSI.
-#Checking is disabled if set to Zero.Otherwise it will use this value as to how better
-#the RSSI of the new/roamable AP should be for roaming
-RoamRssiDiff=3
-
 # If the RSSI of any available candidate is better than currently associated
 # AP by at least gImmediateRoamRssiDiff, then being to roam immediately (without
 # registering for reassoc threshold).
@@ -197,22 +190,6 @@ gImmediateRoamRssiDiff=10
 # To enable, set gRoamIntraBand=1 (Roaming within band)
 # To disable, set gRoamIntraBand=0 (Roaming across band)
 gRoamIntraBand=0
-
-# SAP Country code
-
-# Default Country Code is 2 bytes, 3rd byte is optional indoor or out door.
-
-# Example
-
-#   US Indoor, USI
-
-#   Korea Outdoor, KRO
-
-#   Japan without optional byte, JP
-
-#   France without optional byte, FR
-
-#gAPCntryCode=USI
 
 
 #Short Guard Interval Enable/disable
@@ -282,9 +259,9 @@ BandCapability=0
 
 
 #Beacon Early Termination (1 = enable the BET feature, 0 = disable)
+
 enableBeaconEarlyTermination=1
 beaconEarlyTerminationWakeInterval=8
-
 
 #SOFTAP Channel Range selection
 
@@ -302,31 +279,12 @@ gAPChannelSelectOperatingBand=0
 
 #Channel Bonding
 gChannelBondingMode5GHz=1
-gChannelBondingMode24GHz=1
+gChannelBondingMode24GHz=0
 
 
 #Enable Keep alive with non-zero period value
 
 gStaKeepAlivePeriod = 30
-
-#Say gGoKeepAlivePeriod(5 seconds) and gGoLinkMonitorPeriod(10 seconds).
-#For every 10 seconds DUT send Qos Null frame(i.e., Keep Alive frame if link is idle for last 10 seconds.)
-#For both active and power save clients.
-
-#Power save clients: DUT set TIM bit from 10th second onwards and till client honors TIM bit.
-#If doesn't honor for 5 seconds then DUT remove client.
-
-#Active clients: DUT send Qos Null frame for 10th seconds onwards if it is not success still we try on
-#11th second if not tries on 12th and so on till 15th second. Hence before disconnection DUT will send 5 NULL frames.
-#Hence in any case DUT will detect client got removed in (10+5) seconds. i.e., (gGoKeepAlivePeriod + gGoLinkMonitorPeriod)..
-
-#gGoLinkMonitorPeriod/ gApLinkMonitorPeriod is period where link is idle and it is period
-#where we send NULL frame.
-
-#gApLinkMonitorPeriod = 10
-
-#gGoLinkMonitorPeriod = 10
-
 
 #If set will start with active scan after driver load, otherwise will start with
 
@@ -363,7 +321,6 @@ gVhtTxMCS=2
 # VHT Tx/Rx MCS values for 2x2
 # Valid values are 0,1,2. If commented out, the default value is 0.
 # 0=MCS0-7, 1=MCS0-8, 2=MCS0-9
-gEnable2x2=1
 gVhtRxMCS2x2=2
 gVhtTxMCS2x2=2
 
@@ -447,9 +404,6 @@ gFlexConnectPowerFactor=0
 
 #Disable split scan, the FW will take care of it
 gNumChanCombinedConc=60
-
-#Enable Power Save offload
-gEnablePowerSaveOffload=4
 
 #Enable firmware uart print
 gEnablefwprint=0
@@ -583,7 +537,6 @@ gSapSccChanAvoidance=0
 # help if the lifetime in RA is less than 3*60=3min. Then
 # we need to change it, though it is uncommon.
 # Enable RA filtering offload
-gRAFilterEnable=1
 gRArateLimitInterval=300
 
 # Inactivity time (in ms) to end TX Service Period while in IBSS power save mode
@@ -627,21 +580,11 @@ gTDLSIdlePacketThreshold=1
 
 gEnableSelfRecovery=1
 
-#Enable MC address filtering offload
-gMCAddrListEnable=1
-# Enable Runtime PM Feature.
-# Enabling this feature will put target wow and shutdown pcie link
-# when inactivity is detected in WLAN Driver.
-# This feature is inactive when beaconing interfaces are active with
-# clients associated.
-# 0 - disable
-# 1 - enable
-
-gRuntimePM=1
 # When gRuntimePM is disabled gRuntimeAutoTime won't take effect.
 # The Time is in msec.
 # 100 is min, 10000 is max, 500 is default.
-gRuntimePMDelay=1500
+
+gRuntimePMDelay=500
 
 # Enable to check FW hash if secure FW feature is enabled. It's for defconfig
 # builds only since it will be ignored in performance/release builds.
@@ -665,7 +608,9 @@ gExtScanEnable=1
 
 gEnableModulatedDTIM=2
 gMaxLIModulatedDTIM=6
-gSoftApMaxPeers=16
+
+# Disable RX wakelock feature
+rx_wakelock_timeout=0
 
 END
 
