msm8996-common: rootdir: Use multi-step cpu input boosts
Based on: https://github.com/AOSPA/android_device_oneplus_oneplus3/commit/be7c9267dc04b75cb2174033c915054c2f132eb4
	  https://github.com/arter97/android_kernel_oneplus_msm8998/commit/a6bab41399e60094614acc7b8ef6b33724d70f89

--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -127,6 +127,8 @@ on enable-low-power
     # Input boost config
     write /sys/module/cpu_boost/parameters/input_boost_freq "0:1036000 2:1324800"
     write /sys/module/cpu_boost/parameters/input_boost_ms 40
+    write /sys/module/cpu_boost/parameters/input_boost_freq_s2 "960000 0"
+    write /sys/module/cpu_boost/parameters/input_boost_ms_s2 200
 
     # Set big.LITTLE scheduler parameters
     write /proc/sys/kernel/sched_boost 0
