Tune thermal-config and add few on-boot kernel settings

--- a/configs/thermal-engine.conf
+++ b/configs/thermal-engine.conf
@@ -37,10 +37,9 @@ set_point_clr    65000
 
 [battery_monitor]
 algo_type monitor
-sensor tsens_tz_sensor17
+sensor batt_therm
 sampling 1000
-thresholds 49000 55000
-thresholds_clr 47000 53000
+thresholds 45000 47000 49000
+thresholds_clr 43000 45000 47000
 actions battery battery battery
-action_info 0 1
-
+action_info 0 1 2
