--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -34,10 +34,14 @@ on early-init
     chown root system /dev/kmsg
     chmod 0620 /dev/kmsg
 
+    setprop sys.io.scheduler noop
+
     symlink /data/tombstones /tombstones
 
     # ZRAM setup
     write /sys/block/zram0/comp_algorithm lz4
+    write /sys/block/zram0/max_comp_streams 4
+    write /sys/block/zram0/disksize 536870912
     write /proc/sys/vm/page-cluster 0
 
 on init
@@ -314,6 +318,7 @@ on boot
     chown wifi wifi /sys/module/wlan/parameters/fwpath
 
 on property:sys.boot_completed=1
+
     # Enable ZRAM on boot_complete
     swapon_all /vendor/etc/fstab.qcom
 
@@ -321,13 +326,31 @@ on property:sys.boot_completed=1
     write /sys/block/sda/queue/read_ahead_kb 128
     write /sys/block/dm-0/queue/read_ahead_kb 128
     write /sys/block/dm-1/queue/read_ahead_kb 128
-    write /sys/block/mmcblk0/bdi/read_ahead_kb 128
-    write /sys/block/mmcblk0/queue/read_ahead_kb 128
-    write /sys/block/mmcblk0rpmb/bdi/read_ahead_kb 128
-    write /sys/block/mmcblk0rpmb/queue/read_ahead_kb 128
+
+    # Set read_ahead_kb to 1024 after system completes boot
+    write /sys/block/mmcblk0/bdi/read_ahead_kb 1024
+    write /sys/block/mmcblk0/queue/read_ahead_kb 1024
+    write /sys/block/mmcblk0rpmb/bdi/read_ahead_kb 1024
+    write /sys/block/mmcblk0rpmb/queue/read_ahead_kb 1024
 
     # CPE fw_name used by sound trigger HAL
     chown media audio /sys/kernel/wcd_cpe0/fw_name
+
+    chmod 644 /sys/module/workqueue/parameters/power_efficient
+    write /sys/module/workqueue/parameters/power_efficient Y
+
+    # Entropy
+    write /proc/sys/kernel/random/read_wakeup_threshold 512
+    write /proc/sys/kernel/random/write_wakeup_threshold 1024
+
+    # Kcal Configuration
+    write /sys/devices/platform/kcal_ctrl.0/kcal_min 35
+    write /sys/devices/platform/kcal_ctrl.0/kcal_cont 260
+    write /sys/devices/platform/kcal_ctrl.0/kcal_val 256
+    write /sys/devices/platform/kcal_ctrl.0/kcal_hue 0
+    write /sys/devices/platform/kcal_ctrl.0/kcal "245 246 256"
+    write /sys/devices/platform/kcal_ctrl.0/kcal_enable 1
+    write /sys/devices/platform/kcal_ctrl.0/kcal_sat 260
 
 on property:persist.env.fastdorm.enabled=true
     setprop persist.radio.data_no_toggle 1
