--- a/configs/thermal-engine.conf
+++ b/configs/thermal-engine.conf
@@ -25,10 +25,9 @@ time_constant 0
 
 [battery_monitor]
 algo_type monitor
-sensor tsens_tz_sensor17
+sensor batt_therm
 sampling 1000
-thresholds 43000 49000
-thresholds_clr 41000 47000
+thresholds 43000 45000 47000
+thresholds_clr 41000 43000 45000
 actions battery battery battery
-action_info 0 1
-
+action_info 0 1 2
