--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -38,6 +38,8 @@ on early-init
 
     # ZRAM setup
     write /sys/block/zram0/comp_algorithm lz4
+    write /sys/block/zram0/max_comp_streams 4
+    write /sys/block/zram0/disksize 536870912
     write /proc/sys/vm/page-cluster 0
 
 on init
@@ -336,6 +338,14 @@ on property:sys.boot_completed=1
 
     # CPE fw_name used by sound trigger HAL
     chown media audio /sys/kernel/wcd_cpe0/fw_name
+
+    chmod 644 /sys/module/workqueue/parameters/power_efficient
+    write /sys/module/workqueue/parameters/power_efficient Y
+    write /sys/block/mmcblk0/queue/scheduler fiops
+    write /sys/block/mmcblk0/queue/read_ahead_kb 1024
+    write /proc/sys/kernel/random/read_wakeup_threshold 768
+    write /proc/sys/kernel/random/write_wakeup_threshold 768
+    write /sys/kernel/dyn_fsync/Dyn_fsync_active 1
 
 on property:persist.env.fastdorm.enabled=true
     setprop persist.radio.data_no_toggle 1
